Fix overflow for search container

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -191,3 +191,6 @@ h1 {
 h1, h3 {
   color: white;
 }
+#notelist {
+  padding: 0;
+}
